--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
     git restore --staged <filename> -> to unstage a staged file
 
     push -> upload local repo content to remote repo
+
+    git add . -> commit -m "message" -> git push origin main
 -->
