newUpdate 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         
     push -> upload local repo content to remote repo
         git push -u origin main -> saves remote git location so that we can use git push command only to push to git repo
+        --set-upstream origin <branch> -> push to a new branch 
     
     git remote add origin <link> -> adds link of remote repo where changes are to be pushed
         remote -v -> shows path of origin
