--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     git restore --staged <filename> -> to unstage a staged file
 
+    git reset <filename> -> to undo added changes
+        git reset HEAD~1 -> to reset last commited change (single)
+        
     init ->    initialises empty git repo
         
     push -> upload local repo content to remote repo
